--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "OrangeHRMTest": "npx cypress run --headed \"cypress/integration/OrangeHRM/*\""
   },
   "author": "",
   "license": "ISC",
